Validation for DM, course content added for both

--- a/courses/web.html
+++ b/courses/web.html
@@ -108,9 +108,11 @@
             </h6>
             <br>
             <div class="validate my-auto">
-              <input type="text" id="couponCode" class="form-group text-center" placeholder="Enter Discount Coupon"> 
-              <button class="btn btn-dark btn-sm" onclick="ValidateCode()">Validate Code</button>
+              <input type="text" id="couponCode" class="form-group text-center" placeholder="Enter Discount Coupon">
+              <button class="btn btn-outline-dark btn-sm" onclick="ValidateCodeWeb()">Validate Code</button>
             </div><br>
+            <div id="alert" class="mt-3">
+            </div>
             <a id="payLinkWeb">
               <button type="button" class="mt-2 btn btn-primary btn-lg">Enroll Now</button>
             </a>
@@ -123,25 +125,69 @@
       </div>
     </div>
 
-    <div class="text-center">
-      <h2>We are Launching Soon!</h2>
-      <h6>Your favourite course is under construction it will go live soon </h6>
-    </div>
-
-    <hr class="my-4 divider">
-    <div class="container" style="opacity: 0.1;">
+    <div class="container mt-3">
       <div class="row">
         <div class="col-md-3 d-none d-md-block course-stats">
-          <h5>Course Progress Visuals Here</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam temporibus iste voluptatem quia voluptates?
-            Ipsum culpa sit soluta neque sint facilis aperiam voluptates, ex quam voluptatum, quo mollitia error non.
-          </p>
+          <h3>Course Features</h3>
+          <br>
+          <p>Skill Level: Beginner</p>
+          <hr>
+          <p>Access on Mobile and PC</p>
+          <hr>
+          <p>Language: English</p>
+          <hr>
+          <p>Certificate of Completion</p>
+          <hr>
+          <p>Doubt Sessions</p>
+          <hr>
+          <p>Live and Interactive classes</p>
+          <hr>
+          <p>Experienced Faculties</p>
+          <hr>
+          <p>Duration: 4 Weeks</p>
         </div>
         <div class="col-md-9 col-12 course-content">
-          <h5>Course Content Here</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam corrupti, nesciunt voluptate ullam
-            voluptatem repellat quod vitae saepe? Sunt ut facere optio nesciunt suscipit expedita labore! Eum autem
-            natus exercitationem.</p>
+          <h3 class="text-center">Course Curriculum</h3>
+          <div class="text-left">
+            <div class="row">
+              <div class="col-md-6">
+                <h6 class="text-center">Week 1</h6>
+                <ul class="text-left">
+                  <p>Introduction to Web Development, how the internet
+                    works and a first look at HTML5</p>
+                  <p>Adding content with HTML5 and a basic intro to
+                    JavaScript</p>
+                </ul>
+              </div>
+              <div class="col-md-6 center">
+                <h6 class="text-center">Week 2</h6>
+                <ul class="text-left" >
+                  <p>Introduction to CSS, Design Trends, Resources you
+                    must know about and a first look at CSS3</p>
+                  <p>Styling the content with CSS3 and diving deeper into
+                    JavaScript</p>
+                </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <h6 class="text-center">Week 3</h6>
+                <ul class="text-left">
+                  <p>Backend Basics and a first look at MySQL</p>
+                  <p>Creating, Reading, Updating and Deleting data with
+                    MySQL</p>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <h6 class="text-center">Week 4</h6>
+                <ul class="text-left">
+                  <p>Creating, Reading, Updating and Deleting data with
+                    MySQL</p>
+                  <p>Advanced PHP and Deploying a website</p>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
