--- a/courses/web.html
+++ b/courses/web.html
@@ -127,7 +127,7 @@
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-md-3 d-none d-md-block course-stats">
+        <div class="col-md-3 col-12 course-stats">
           <h3>Course Features</h3>
           <br>
           <p>Skill Level: Beginner</p>
