Mentors added, Price cut added

--- a/courses/dm.html
+++ b/courses/dm.html
@@ -113,7 +113,7 @@
             </div><br>
             <div class="mt-2" id="alert"></div>
             <a id="payLinkDM">
-              <button type="button" class="mt-2 btn btn-primary btn-lg">Enroll Now</button>
+              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @1500</button> <s>2800</s>
             </a>
           </div>
           <div class="col-sm-6 col-12">
@@ -196,7 +196,32 @@
       </div>
     </div>
   </div>
-
+  <div class="container my-3">
+    <h3 class="text-center">About the Mentor</h3>
+    <div class="row mt-3">
+      <div class="col-md-4 my-auto">
+        <img src="../Assets/Images/siddhant.jpg" width="300px">
+      </div>
+      <div class="col-md-8 my-auto">
+        <p>An entrepreneur and a
+          co-founder of TheWav,
+          Siddhant Keshari is an
+          enthusiastic individual
+          whose expertise has
+          helped him handle
+          digital marketing
+          campaigns on a national
+          level.</p>
+          <p>His organization deals with the 3Ds that are Design,
+            Development and Digital Marketing. Having mentored
+            overthousand students, this inspiring young mind is
+            zealous and impassioned about Marketing and Growth
+            Hacking. This youthful and energetic CEO has pledged
+            himself to the pursuit of knowledge and in helping others
+            walk in the same path.</p>
+      </div>
+    </div>
+  </div>
 
   <div class="bottom-container">
     <div class="container my-auto">
