--- a/courses/web.html
+++ b/courses/web.html
@@ -114,7 +114,7 @@
             <div id="alert" class="mt-3">
             </div>
             <a id="payLinkWeb">
-              <button type="button" class="mt-2 btn btn-primary btn-lg">Enroll Now</button>
+              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @1049</button> <s>1500</s>
             </a>
           </div>
           <div class="col-sm-6 col-12">
@@ -192,7 +192,36 @@
       </div>
     </div>
   </div>
+  <div class="container my-3">
+    <h3 class="text-center">About the Mentor</h3>
 
+    <div class="row mt-3">
+      <div class="col-md-4 my-auto">
+        <img src="../Assets/Images/aquib.JPG" width="300px">
+      </div>
+      <div class="col-md-8 my-auto">
+        <p>Mr. Aquib Ajani is a cofounder
+          and Chief Vision
+          officer of design and
+          development firm,
+          Tabdeel Studios. He
+          completed his postgraduation
+          in Software
+          Engineering from VIT
+          University, Vellore.
+          About the Mentor</p>
+          <p>
+            He has successfully designed and developed numerous
+apps and websites for various startups and industry
+professionals.
+He has trained over 5000 students in a wide
+variety of Design and Development tools and frameworks
+across multiple platforms including Udemy, MyCaptain
+and ChalkStreet.
+          </p>
+      </div>
+    </div>
+  </div>
 
   <div class="bottom-container">
     <div class="container my-auto">
