--- a/courses/dm.html
+++ b/courses/dm.html
@@ -113,7 +113,7 @@
             </div><br>
             <div class="mt-2" id="alert"></div>
             <a id="payLinkDM">
-              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @1500</button> <s>2800</s>
+              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @ Rs. 1500</button> <s>2800</s>
             </a>
           </div>
           <div class="col-sm-6 col-12">
