--- a/courses/web.html
+++ b/courses/web.html
@@ -114,7 +114,7 @@
             <div id="alert" class="mt-3">
             </div>
             <a id="payLinkWeb">
-              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @1049</button><s>1500</s>
+              <button type="button" class="mt-2 btn btn-primary btn-lg" id="enrolBtn">Enroll Now @ Rs. 1049</button><s>1500</s>
             </a>
           </div>
           <div class="col-sm-6 col-12">
