--- a/courses/web.html
+++ b/courses/web.html
@@ -200,7 +200,7 @@
         <img src="../Assets/Images/aquib.JPG" width="300px">
       </div>
       <div class="col-md-8 my-auto">
-        <p>Mr. Aquib Ajani is a cofounder
+        <p>Mr. Aquib Ajani is a co-founder
           and Chief Vision
           officer of design and
           development firm,
@@ -208,8 +208,7 @@
           completed his postgraduation
           in Software
           Engineering from VIT
-          University, Vellore.
-          About the Mentor</p>
+          University, Vellore.</p>
           <p>
             He has successfully designed and developed numerous
 apps and websites for various startups and industry
