--- a/aboutus.html
+++ b/aboutus.html
@@ -235,10 +235,10 @@
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/ashna.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/prativa.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Ashna Bahl</h4>
+                <h4>Prativa Chakraborty</h4>
                 <h6>Content Team</h6>
               </div>
             </div>
@@ -273,15 +273,6 @@
           <div class="col-sm-4 col-12">
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/varun.jpg">
-              </div>
-              <div class="col-sm-8 col-12 m-auto">
-                <h4>Varun Vaibhav Jha</h4>
-                <h6>Chief Product Officer</h6>
-              </div>
-            </div>
-            <div class="row member">
-              <div class="col-sm-4 col-12">
                 <img class="rounded-circle img-fluid" src="Assets/profiles/payel.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
@@ -300,7 +291,16 @@
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/arnabjpg.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/Anish.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anish Kumar Singh</h4>
+                <h6>Design Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/arnab.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
                 <h4>Arnab Deep</h4>
@@ -330,11 +330,20 @@
           <div class="col-sm-4 col-12">
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/prateek.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/varun.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>K. Suyash Prateek</h4>
-                <h6>S&M Team</h6>
+                <h4>Varun Vaibhav Jha</h4>
+                <h6>Chief Product Officer</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/tushar.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Tushar Barnwal</h4>
+                <h6>S&M Head</h6>
               </div>
             </div>
             <div class="row member">
@@ -346,30 +355,12 @@
                 <h6>S&M Team</h6>
               </div>
             </div>
-            <div class="row member">
-              <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/umang.jpg">
-              </div>
-              <div class="col-sm-8 col-12 m-auto">
-                <h4>Umang Khaitan</h4>
-                <h6>S&M Team</h6>
-              </div>
-            </div>
-            <div class="row member">
-              <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/tushar.jpg">
-              </div>
-              <div class="col-sm-8 col-12 m-auto">
-                <h4>Tushar Barnwal</h4>
-                <h6>S&M Team</h6>
-              </div>
-            </div>
               <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/arkaprava.jpeg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/manikanta.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Arkaprava Chakraborty</h4>
+                <h4>Manikanta TJ</h4>
                 <h6>S&M Team</h6>
              </div>
          </div>
